--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,6 @@
 @import './base.css';
 @import 'tailwindcss';
+@import 'primeicons/primeicons.css';
 
 #app {
   margin: 0 auto;
@@ -7,15 +8,14 @@
   font-weight: normal;
 }
 
-a,
-.green {
+.menu > a {
   text-decoration: none;
-  color: rgb(15, 29, 24);
+  color: var(--primary-color);
   transition: 0.4s;
 }
 
-a:hover {
-  background-color: #dfa3ff;
+.menu-entry:hover {
+  background-color: var(--terciary-color);
   border-radius: 5px;
 }
 
@@ -42,4 +42,15 @@ a:hover {
     border: solid 1px;
     border-color: var(--terciary-color);
   }
+}
+
+.webIcon {
+  color: var(--terciary-color);
+}
+
+@theme {
+  --color-primary: var(--primary-color);
+  --color-secondary: var(--secondary-color);
+  --color-terciary: var(--terciary-color);
+  --color-terciary-soft: var(--terciary-color-soft);
 }
