show more/less description

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -2,8 +2,8 @@
 :root {
   --primary-color: #181818;
   --secondary-color: #b9f8cf;
-  --terciary-color: #dfa3ff;
-  --terciary-color-soft: #e6b9ff;
+  --terciary-color: #db97ff;
+  --terciary-color-soft: #ecc9ff;
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
