--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -55,6 +55,6 @@
   --color-secondary: var(--secondary-color);
   --color-terciary: var(--terciary-color);
   --color-terciary-soft: var(--terciary-color-soft);
-  --color-terciary-mute: var(--color-terciary-mute);
+  --color-terciary-mute: var(--terciary-color-mute);
   --font-pixel: 'PixelifySans', sans-pixelify;
 }
