--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -47,7 +47,7 @@
 
 @font-face {
   font-family: PixelifySans;
-  src: url(src/assets/PixelifySans.ttf);
+  src: url(/src/assets/PixelifySans.ttf);
 }
 
 @theme {
