--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,7 +1,8 @@
 /* color palette from <https://github.com/vuejs/theme> */
 :root {
   --primary-color: #181818;
-  --secondary-color: #b9f8cf;
+  --secondary-color: #ffc552;
+  /* --secondary-color: #b9f8cf; */
   --terciary-color: #db97ff;
   --terciary-color-soft: #ecc9ff;
   --terciary-color-mute: #8921c1;
