--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -7,7 +7,7 @@
   /* --terciary-color: #db97ff;
   --terciary-color-soft: #ecc9ff;
   --terciary-color-mute: #8921c1; */
-    --terciary-color: #ffb627;
+  --terciary-color: #ffb627;
   --terciary-color-soft: #ffc971;
   --terciary-color-mute: #e2711d;
 
@@ -94,4 +94,10 @@ button:hover {
 .router-link-card:hover {
   color: var(--terciary-color-mute);
   /* color: green; */
+}
+
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
 }
